<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.umcp.justingoodman.fitbit_economics_study.CoffeeRewards">

    <ImageView
        android:id="@+id/enjoy_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/coupon_desc"
        android:tint="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/text_coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/enjoy" />

    <TextView
        android:id="@+id/text_coffee"
        android:layout_width="290dp"
        android:layout_height="175dp"
        android:background="@color/grayOut"
        android:gravity="center_vertical"
        android:text="@string/syncFitbit"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/enjoy_coffee"
        app:layout_constraintTop_toBottomOf="@+id/enjoy_coffee" />

    <TextView
        android:id="@+id/block_coffee"
        android:layout_width="78dp"
        android:layout_height="175dp"
        android:background="@color/grayOut"
        app:layout_constraintEnd_toEndOf="@+id/enjoy_coffee"
        app:layout_constraintStart_toEndOf="@+id/text_coffee"
        app:layout_constraintTop_toBottomOf="@+id/enjoy_coffee" />

    <ImageView
        android:id="@+id/einstein_coffee"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/einstein_desc"
        app:layout_constraintBottom_toBottomOf="@+id/block_coffee"
        app:layout_constraintEnd_toEndOf="@+id/block_coffee"
        app:layout_constraintTop_toTopOf="@+id/block_coffee"
        app:srcCompat="@drawable/einstein"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/redeem_coffee"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/redeem"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_coffee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_coffee"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/cancel_coffee"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/back"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_coffee"
        android:layout_marginRight="16dp" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
